<resources>
    <string name="app_name">My Application 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_and_filter">Sort and Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="_20_products_found">20 Products found</string>
    <string name="_500gm">500gm</string>
    <string name="apple_best_of_himalaya_s">Apple- Best of Himalaya\'s</string>
    <string name="rs_300">RS 300</string>
    <string name="_169_5">169.5</string>
    <string name="add">+ add</string>
    <string name="_20">20</string>
    <string name="standard_delivery_tomorrow_evening">Standard Delivery (Tomorrow Evening)</string>
    <string name="any">Any</string>
    <string name="date">Date</string>
    <string name="popularity">Popularity</string>
    <string name="distance">Distance</string>
    <string name="price">Price</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="people">People</string>
    <string name="ranger">Ranger</string>
    <string name="follow">Follow</string>
    <string name="clear">Clear</string>
    <string name="circle">Circle</string>
    <string name="rectangle">Rectangle</string>
    <string name="update_data">Update Data</string>
    <string name="Hanif">Hanif</string>
    <string name="post_data">Post Data</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="are_you_sure_you_want_to_delete">Are You Sure You Want To Delete ?</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="gender">
        <item>Pick Any One</item>
        <item>Male</item>
        <item>Female</item>
        <!--<item>Other</item>-->
    </string-array>
</resources>
