<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".apicalling.apicallingcrud.ApiCallingBottomSheetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBottomSheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:text="@string/are_you_sure_you_want_to_delete"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tvNoBottomSheet"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/post_api_btn"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBottomSheet" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tvYesBottomSheet"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/post_api_btn"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBottomSheet" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>