<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/productImage"
            android:layout_width="180dp"
            android:layout_height="140dp"
            android:layout_marginTop="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/apple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/vegOrNonVegImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:src="@drawable/veg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/productQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/_500gm"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/productImage"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/apple_best_of_himalaya_s"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/oldPrice"
            app:layout_constraintEnd_toEndOf="@+id/productImage"
            app:layout_constraintStart_toStartOf="@+id/productImage"
            app:layout_constraintTop_toBottomOf="@id/productImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/oldPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/line"
            android:text="@string/rs_300"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/consAddProduct"
            app:layout_constraintEnd_toStartOf="@+id/newPrice"
            app:layout_constraintStart_toStartOf="@id/consAddProduct" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/newPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/_169_5"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/consAddProduct"
            app:layout_constraintEnd_toEndOf="@+id/consAddProduct"
            app:layout_constraintLeft_toRightOf="@id/oldPrice"
            app:layout_constraintStart_toEndOf="@+id/oldPrice" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/productDeliveryStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/AddProductBtn"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_button"
                android:text="@string/add"
                android:textSize="12sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/minus"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/minus"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/addItemCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/_20"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/minus"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/plus"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/plus"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/addItemCount"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/productDeliveryStatus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/standard_delivery_tomorrow_evening"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>