<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apicalling.apicallingcrud.PostAndPutApiCallingActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPostData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/post_data"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edNamePostApiLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPostData">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edNamePostApi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/brown"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edEmailPostApiLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edNamePostApiLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmailPostApi"
            android:layout_width="match_parent"
            android:textColor="@color/brown"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spPostApi"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="20dp"
        android:background="@drawable/spinner_style"
        android:entries="@array/gender"
        app:layout_constraintTop_toBottomOf="@id/edEmailPostApiLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPostData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/post_api_btn"
        android:text="Post Data"
        app:backgroundTint="@null"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spPostApi" />
</androidx.constraintlayout.widget.ConstraintLayout>