<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ConstraintLayoutAndRecycleView.ProductFilterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/lite_Red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/actor"
            android:text="@string/sort_and_filter"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sortBy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#EDEBEB"
        android:fontFamily="@font/actor"
        android:gravity="center_vertical"
        android:paddingHorizontal="30dp"
        android:text="@string/sort_by"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consSortByButtons"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortBy">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSortBy1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_states_2"
            android:text="@string/date"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnSortBy2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btnSortBy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_states"
            android:text="@string/popularity"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnSortBy3"
            app:layout_constraintStart_toEndOf="@+id/btnSortBy1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSortBy3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_states_3"
            android:text="@string/distance"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnSortBy2"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#EDEBEB"
        android:fontFamily="@font/actor"
        android:gravity="center_vertical"
        android:paddingHorizontal="30dp"
        android:text="Distance"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/consSortByButtons" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/distance" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#EDEBEB"
        android:fontFamily="@font/actor"
        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:text="Price"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consPriceButtons"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price">

        <Button
            android:id="@+id/free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_states_2"
            android:text="Free"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/paid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_states_3"
            android:text="Paid"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/free"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/people"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#EDEBEB"
        android:fontFamily="@font/actor"
        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:text="People"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/consPriceButtons" />

    //sortbyButtons

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consPeopleButtons"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/people">

        <Button
            android:id="@+id/btnRanger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_states_2"
            android:text="Ranger"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnFollow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btnFollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_states"
            android:text="Follow"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            android:layout_marginHorizontal="-1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnAny"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_states_3"
            android:text="Any"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/interests"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#EDEBEB"
        android:fontFamily="@font/actor"
        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:text="People"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/consPeopleButtons" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="@+id/interests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/interests" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interests"
        tools:listitem="@layout/filter_interests_item_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
